# sftlgui

./: .gitignore  .gitmodules  CMakeLists.txt  lib_gui.h  libgui.h  readme.md  sftlgui.h
imguicustom/: imgui_custom.h  imgui_theme.h
include/sftlgui/: gui.h  imgui_custom.h  imgui_theme.h  sftlgui.h
isvg/: isvg.h
